--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     
  <figure>
     <a href="#item-1">
-      <img src="img/profilepic.png" alt="">
+      <img src="img/me.jpg" alt="">
     </a>
      <p>
 Hello, My name is Andres     
