--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> About Me</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css" />
-   <link rel="stylesheet" href="/css/about%20styles.css" />
+   <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Orbitron|Raleway">
     
