--- a/contact.html
+++ b/contact.html
@@ -25,21 +25,7 @@
 <h1>Contact</h1>
     <!--no html elemets  -->
 
-<form  method="POST" action="http://formspree.io/paperbagwishes@gmail.com">
-  
-<label for="name">name</label>
-<input type="input" name="name" />
-
-<label for="">Email</label>
-<input type="input" name="email" /> 
-  
-  <label for="message">Message</label>
- <textarea name="message"></textarea>
-  
- <input type="submit" value="Thank You!" />
-  
-  
-</form>
+    <h1> feel free to email me at :cazaresandres1993@gmail.com</h1>
     
     
    
