--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <nav>
+    <nav style="color:crimson;font-family:cursive;">Hello World!!
    <ul>
        <li><a href="index.html">Home</a></li>
        <li><a href="about.html">About</a></li>
