--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <nav style="color:crimson;font-family:cursive;">
+    <nav style="color:Raleway;font-family:cursive;">
    <ul>
        <li><a style=font-size: 25px;
     text-decoration: none;
