--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 </head>
 <body>
     <nav style="color:crimson;font-family:cursive;">
-   <ul>
-       <li><a style=font-size: 25px;
-    text-decoration: none;
-    color: #4e45d1;
-    margin: 10px 50px 10px 50px; href="index.html">Home</a></li>
+   <ul style="color:blue;font-family:cursive;>
+       <li><a href="index.html">Home</a></li>
        <li><a href="about.html">About</a></li>
        <li><a href="portfolio.html">Portfolio</a></li>
        <li><a href="contact.html">Contact</a></li>
