--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav style="color:crimson;font-family:cursive;">
-   <ul style="color:blue;font-family:cursive;>
+   <ul style="color:orange;font-family:cursive;>
        <li><a href="index.html">Home</a></li>
        <li><a href="about.html">About</a></li>
        <li><a href="portfolio.html">Portfolio</a></li>
