--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <nav style="color:crimson;font-family:cursive;">
-   <ul style="color:orange;font-family:cursive;>
-       <li><a href="index.html">Home</a></li>
-       <li><a href="about.html">About</a></li>
-       <li><a href="portfolio.html">Portfolio</a></li>
-       <li><a href="contact.html">Contact</a></li>
+   <ul>
+       <li style="color:orange;font-family:cursive;><a href="index.html">Home</a></li>
+       <listyle="color:orange;font-family:cursive;><a href="about.html">About</a></li>
+       <listyle="color:orange;font-family:cursive;><a href="portfolio.html">Portfolio</a></li>
+       <listyle="color:orange;font-family:cursive;><a href="contact.html">Contact</a></li>
    </ul>
   </nav>
     
