--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <nav style="color:crimson;font-family:cursive;">
    <ul>
-       <li><a style="color:orange;font-family:cursive; href="index.html">Home</a></li>
-       <li><a style="color:orange;font-family:cursive; href="about.html">About</a></li>
-       <li><a style="color:orange;font-family:cursive; href="portfolio.html">Portfolio</a></li>
-       <li><a style="color:orange;font-family:cursive; href="contact.html">Contact</a></li>
+       <li><a style="color:orange;font-family:cursive;" href="index.html">Home</a></li>
+       <li><a style="color:orange;font-family:cursive;" href="about.html">About</a></li>
+       <li><a style="color:orange;font-family:cursive;" href="portfolio.html">Portfolio</a></li>
+       <li><a style="color:orange;font-family:cursive;" href="contact.html">Contact</a></li>
    </ul>
   </nav>
     
